kubernetes/security/foundation/network-policies/base/envoy-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-ingress-lock
  namespace: gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflared
      toPorts:
        - ports:
            - { port: "10080", protocol: TCP }
            - { port: "10443", protocol: TCP }
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - { port: "19001", protocol: TCP }
    - fromEntities: [host]
      toPorts:
        - ports:
            - { port: "19003", protocol: TCP }
            - { port: "19001", protocol: TCP }
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - { port: "10443", protocol: TCP }
            - { port: "10080", protocol: TCP }
    - fromCIDR: ["192.168.0.0/24"]
      toPorts:
        - ports:
            - { port: "10443", protocol: TCP }
            - { port: "10080", protocol: TCP }
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - { port: "15008", protocol: TCP }
